Networking/Networking Policies/dev-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  namespace: development
  labels:
    app: db
    tier: backend
    environment: dev
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
    resources:
      requests:
        memory: "256Mi"
        cpu: "100m"
      limits:
        memory: "512Mi"
        cpu: "200m"
