Networking/Networking Policies/prod-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  namespace: production
  labels:
    app: db
    tier: backend
    environment: prod
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
    resources:
      requests:
        memory: "512Mi"
        cpu: "200m"
      limits:
        memory: "1Gi"
        cpu: "400m"
