Networking/Networking Policies/test-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: development
  labels:
    app: client
    tier: testing
    environment: dev
spec:
  containers:
  - name: client
    image: busybox:1.35
    command: ['sleep', '3600']
    resources:
      requests:
        memory: "32Mi"
        cpu: "25m"
      limits:
        memory: "64Mi"
        cpu: "50m"
