Networking/Networking Policies/dev-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
