Networking/Networking Policies/prod-allow-dev-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dev-web-to-prod-db
  namespace: production
spec:
  podSelector:
    matchLabels:
      tier: backend
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
      podSelector:
        matchLabels:
          tier: frontend
          app: web
    ports:
    - protocol: TCP
      port: 3306
